sdk/ios/2.0/overview.mdx
---
title: "Overview"
description: "Overview of Overview in CometChat."
---



This guide demonstrates how to add chat to an iOS application using CometChat. Before you begin, we strongly recommend you read the [Key Concepts](/sdk/ios/2.0/key-concepts) guide.

#### I want to integrate with my app

1. [Get your application keys](overview#get-your-application-keys)
2. [Add the CometChat dependency](overview#add-the-cometchat-dependency)
3. [Initialize CometChat](overview#initialize-cometchat)
4. [Register or Login your user](overview#register-and-login-your-user)
5. [Integrate our UI Kits](overview#integrate-our-ui-kits)

#### I want to explore iOS sample apps.

Import the app into Xcode and follow the steps mentioned in the `README.md` file.

[Download Swift Chat App](https://github.com/cometchat-pro/ios-swift-chat-app/archive/refs/heads/v2.zip)

[Download Obj-c Chat App](https://github.com/cometchat-pro/ios-objective-c-chat-app/archive/refs/heads/v2.zip)

[Download iOS SDK from Github](hhttps://github.com/cometchat-pro/sdk/ios)

***

## Get your Application Keys

[Signup for CometChat](https://app.cometchat.com) and then:

1. Create a new app
2. Head over to the **API & Auth Keys** section and note the **Auth Key**, **App ID** & **Region**

<Tip>
Minimum Requirement

1. Xcode 12 or above
2. iOS 11 or higher

</Tip>

***

## Add the CometChat Dependency

### CocoaPods

We recommend using [CocoaPods](https://cocoapods.org/), as they are the most advanced way of managing iOS project dependencies. Open a terminal window, move to your project directory, and then create a `Podfile` by running the following command.

<Warning>

1. CometChatPro SDK supports installation through Cocoapods only. Currently, we are supporting Xcode 12 or above versions of Xcode.
2. CometChatPro SDK includes video calling components. We suggest you run on physical devices to avoid errors.

</Warning>

<Tabs>
<Tab title="Swift">
```bash
$ pod init
```

</Tab>

</Tabs>



Add the following lines to the Podfile.

<Tabs>
<Tab title="Swift">
```ruby
platform :ios, '11.0'
use_frameworks!

target 'YourApp' do
  pod 'CometChatPro', '2.4.2'
end
```

</Tab>

</Tabs>

<Note>

v2.4.1+ onwards, Voice & Video Calling functionality has been moved to a separate framework. In case you do not plan to use the calling feature, please add the Calling framework `pod 'CometChatCalls', '2.1.1'` in your app Podfile.

</Note>



And then install the `CometChatPro` framework through CocoaPods.

<Tabs>
<Tab title="Swift">
```bash
$ pod install
```

</Tab>

</Tabs>



If you're facing any issues while installing pods then use the below command.

<Tabs>
<Tab title="Swift">
```bash
pod install --repo-update
```

</Tab>

</Tabs>



Always get the latest version of `CometChatPro` by command.

<Tabs>
<Tab title="Swift">
```bash
$ pod update CometChatPro
```

</Tab>

</Tabs>

### Setup Bitcode

You can set the Enable Bitcode setting to **YES** present in build settings in your XCode project.

<Frame>
  <img src="/images/a420bc07-1634031189-7ea2eefa96362c62a68a0f87151f85b8.png" />
</Frame>

<Warning>

If you are using CometChat Pro SDK having the version less than 2.0.8, then you need to set **Enable Bitcode** to **NO**

</Warning>

### Swift Standard Libraries

`CometChatPro`framework build on Swift, you have to ensure the required libraries are embedded. This can be done by setting the `“Always Embed Swift Standard Libraries”` checkbox in your target’s build settings to “Yes”:

<Frame>
  <img src="https://www.cometchat.com/docs/assets/images/1623200430-15b0442a710f78a45dd01090dc6a32f1.png" />
</Frame>

### Set Header Search Path

Set the `Header Search Paths` to `$SDKROOT/usr/include/libxml2`.

<Frame>
  <img src="/images/e4bea194-1623200431-3688f1650210376bc85f76bc4cc039ac.png" />
</Frame>

### Excluded Architecture

<Warning>

For Xcode 12 and above, we need to add arm64 in the excluded architecture of build settings as Apple supports only arm architecture for simulators and actual devices. No support provided for X86\_64 and i386 architectures.

</Warning>

### Setting for build for active architecture

<Tip>

In Build Settings, enable active architecture to Yes

</Tip>

<Frame>
  <img src="/images/1f125265-1623200433-17502add9027b08a1711886173f5b7c3.png" />
</Frame>

## Initialize CometChat

The `init()` method initializes the settings required for CometChat. We suggest you call the method on app startup preferably in the `didFinishLaunchingWithOptions:` method of the `AppDelegate` class.

<Tabs>
<Tab title="Swift">
```swift
import CometChatPro

class AppDelegate: UIResponder, UIApplicationDelegate{
{
   var window: UIWindow?
   let appId: String = "ENTER APP ID"
   let region: String = "ENTER REGION CODE"
    
func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {

let mySettings = AppSettings.AppSettingsBuilder().subscribePresenceForAllUsers().setRegion(region: region).build()
        
  CometChat.init(appId: appId ,appSettings: mySettings,onSuccess: { (isSuccess) in
            if (isSuccess) {
                print("CometChat Pro SDK intialise successfully.")
            }
        }) { (error) in
                print("CometChat Pro SDK failed intialise with error: \(error.errorDescription)")
        }
        return true
    }
}
```

</Tab>

<Tab title="Objective C">
```objc
#import <CometChatPro/CometChatPro-Swift.h>

@interface AppDelegate ()

@end

@implementation AppDelegate


- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
  
  NSString *region = @"REGION";
  NSString *appID = @"YOUR_APP_ID";
    
    AppSettingsBuilder *appSettingBuilder = [[AppSettingsBuilder alloc]init];
    AppSettings *appSettings = [[[appSettingBuilder subscribePresenceForAllUsers]setRegionWithRegion:region]build];
    
    [[CometChat alloc]initWithAppId: appID appSettings:appSettings onSuccess:^(BOOL isSuccess) {
        NSLog(isSuccess ? @"CometChat Initialize Success:-YES" : @"CometChat Initialize Success:-NO");
    } onError:^(CometChatException * error) {
        NSLog(@"Error %@",[error errorDescription]);
    }];
    return YES;
}
```

</Tab>

</Tabs>



Make sure you replace the `appId` with your CometChat **App ID** in the above code.

## Register and Login your User

Once initialization is successful, you will need to create a user. To create users on the fly, you can use the `createUser()` method. This method takes a `User` object and the `API Key` as input parameters and returns the created `User` object if the request is successful.

<Tabs>
<Tab title="Swift">
```swift
let newUser : User = User(uid: "user1", name: "Kevin") // Replace with your uid and the name for the user to be created.
let authKey = "AUTH_KEY" // Replace with your Auth Key.
CometChat.createUser(user: newUser, apiKey: authKey, onSuccess: { (User) in
      print("User created successfully. \(User.stringValue())")
  }) { (error) in
     print("The error is \(String(describing: error?.description))")
}
```

</Tab>

</Tabs>

Once initialization is successful, you will need to log the user into CometChat using the `login()` method.

The login method needs to be called in the following scenarios:

1. When the user is logging to the App for the first time.
2. If the `CometChat.getLoggedInUser()` function returns nil.

<Warning>

Kindly, make sure you add the check of CometChat.getLoggedInUser() function in your app where you check the App's user login status. In case it returns nil then you need to call the Login method inside it.

</Warning>

<Tabs>
<Tab title="Swift">
```swift
let uid    = "cometchat-uid-1"
let authKey = "YOUR_AUTH_KEY"

if CometChat.getLoggedInUser() == nil {

	CometChat.login(UID: uid, apiKey: authKey, onSuccess: { (user) in

  	print("Login successful : " + user.stringValue())

	}) { (error) in

  	print("Login failed with error: " + error.errorDescription);

	}

}
```

</Tab>

<Tab title="Objective C">
```objc
NSString *uid 	 = @"cometchat-uid-1";
NSString *apiKey = @"YOUR_API_KEY";

if ([CometChat getLoggedInUser == nil]){
  
[CometChat loginWithUID:uid apiKey:apiKey onSuccess:^(User * user) {
    
    // Login Successful
    NSLog(@" Login Successful :%@",[user stringValue]);
    
} onError:^(CometChatException * error) {
    
    // Login error
    NSLog(@" Login failed with exception: %@",[error errorDescription]);
    
}];
}
```

</Tab>

</Tabs>

Make sure you replace the `AUTH_KEY` with your CometChat **AuthKey** in the above code.

<Note>
Sample Users

We have set up 5 users for testing having UIDs: `cometchat-uid-1`, `cometchat-uid-2`, `cometchat-uid-3`, `cometchat-uid-4` and `cometchat-uid-5`.

</Note>

The `login()` method returns the User object containing all the information of the logged in user.

<Warning>

UID can be alphanumeric with underscore and hyphen. Spaces, punctuation and other special characters are not allowed.

</Warning>

## Integrate our iOS UI Kit

Please refer [iOS UI Kit](/ui-kit/ios/v2/overview) section to integrate iOS UI Kit inside your app.
