sdk/ios/3.0/overview.mdx
---
title: "Overview"
description: "Overview of Overview in CometChat."
---



This guide demonstrates how to add chat to an iOS application using CometChat. Before you begin, we strongly recommend you read the [Key Concepts](/sdk/ios/3.0/key-concepts) guide.

#### I want to integrate with my app

1. [Get your application keys](overview#get-your-application-keys)
2. [Add the CometChat dependency](overview#add-the-cometchat-dependency)
3. [Initialize CometChat](overview#initialize-cometchat)
4. [Register or Login your user](overview#register-and-login-your-user)
5. [Integrate our UI Kits](overview#integrate-our-ui-kits)

#### I want to explore iOS sample apps.

Import the app into Xcode and follow the steps mentioned in the `README.md` file.

[Download Swift Chat App](https://github.com/cometchat-pro/ios-swift-chat-app/archive/master.zip)

[Download Obj-c Chat App](https://github.com/cometchat-pro/ios-objective-c-chat-app/archive/master.zip)

[Download iOS SDK from Github](https://github.com/cometchat/chat-sdk-ios/tree/v3)

## Get your Application Keys

[Signup for CometChat](https://app.cometchat.com) and then:

1. Create a new app
2. Head over to the **API & Auth Keys** section and note the **Auth Key**, **App ID** & **Region**

<Tip>
Minimum Requirement

1. Xcode 12 or above
2. iOS 11 or higher

</Tip>

***

## Add the CometChat Dependency

### CocoaPods

We recommend using [CocoaPods](https://cocoapods.org/), as they are the most advanced way of managing iOS project dependencies. Open a terminal window, move to your project directory, and then create a `Podfile` by running the following command.

<Warning>

1. CometChatPro SDK supports installation through Cocoapods and SPM both. Currently, we are supporting Xcode 12 or above versions of Xcode.
2. CometChatPro SDK includes video calling components. We suggest you run on physical devices to avoid errors.

</Warning>

<Tabs>
<Tab title="Swift">
```bash
$ pod init
```

</Tab>

</Tabs>



Add the following lines to the Podfile.

<Tabs>
<Tab title="Swift">
```ruby
platform :ios, '12.0'
use_frameworks!

target 'YourApp' do
  pod 'CometChatPro', '3.0.919'
end
```

</Tab>

</Tabs>

<Note>

v3.0.2+ onwards, Voice & Video Calling functionality has been moved to a separate framework. In case you do plan to use the calling feature, please add the Calling framework `pod 'CometChatCalls', '3.0.0'` in your app Podfile.

</Note>



And then install the `CometChatPro` framework through CocoaPods.

<Tabs>
<Tab title="Swift">
```bash
$ pod install
```

</Tab>

</Tabs>



If you're facing any issues while installing pods then use the below command.

<Tabs>
<Tab title="Swift">
```bash
pod install --repo-update
```

</Tab>

</Tabs>



Always get the latest version of `CometChatPro` by command.

<Tabs>
<Tab title="Swift">
```bash
$ pod update CometChatPro
```

</Tab>

</Tabs>

### Swift Packages

To install **Swift Packages** you can use Xcode package manager.

1. Open **Xcode**, go to the project's **General** settings tab and select the project under **Project** in the left column.
2. Go to the **Swift packages** tab and click on the **+** button.

<Frame>
  <img src="/images/a420bc07-1634031189-7ea2eefa96362c62a68a0f87151f85b8.png" />
</Frame>

3. Once the pop-up appears, enter the github repository address in the search bar [`https://github.com/cometchat/chat-sdk-ios.git`](https://github.com/cometchat/chat-sdk-ios.git) and set dependency rule to `Up to Next Major Version` and set version as `3.0.919` . Then click on the **Add Package** button.

<Frame>
  <img src="/images/eb66d9e4-m1d2l5v24ovbue3ulqlbv4y4lapryq8cvfp1e4fd5f6elvcgynbu7mjllsbmrn14-88cf2d220c36043db932c1d01c1daa4d.png" />
</Frame>

4. **CometChatPro** must be checked in the **Package Product** column and click on Add Package. This will add **Package Dependencies** menu in Xcode.

<Frame>
  <img src="/images/26be7973-1634032435-7765adb6ade996de647cdd47906d4f3f.png" />
</Frame>

### Setup Bitcode

You can set the Enable Bitcode setting to **YES** present in build settings in your XCode project.

<Frame>
  <img src="/images/47afdab0-1623200428-e5b879b73a5abcf77d5d291426717537.png" />
</Frame>

<Warning>

If you are using CometChat Pro SDK having the version less than 2.0.8, then you need to set **Enable Bitcode** to **NO**

</Warning>

### Swift Standard Libraries

`CometChatPro`framework build on Swift, you have to ensure the required libraries are embedded. This can be done by setting the `“Always Embed Swift Standard Libraries”` checkbox in your target’s build settings to “Yes”:

<Frame>
  <img src="/images/6ae89ab8-1623200430-15b0442a710f78a45dd01090dc6a32f1.png" />
</Frame>

### Set Header Search Path

Set the `Header Search Paths` to `$SDKROOT/usr/include/libxml2`.

<Frame>
  <img src="/images/e4bea194-1623200431-3688f1650210376bc85f76bc4cc039ac.png" />
</Frame>

### Excluded Architecture

<Warning>

For Xcode 12 and above, we need to add arm64 in the excluded architecture of build settings as Apple supports only arm architecture for simulators and actual devices. No support provided for X86\_64 and i386 architectures.

</Warning>

### Setting for build for active architecture

<Tip>

In Build Settings, enable active architecture to Yes

</Tip>

<Frame>
  <img src="/images/1f125265-1623200433-17502add9027b08a1711886173f5b7c3.png" />
</Frame>

## Initialize CometChat

The `init()` method initializes the settings required for CometChat.

The `init()` method takes the below parameters:

1. appID - You CometChat App ID
2. appSettings - An object of the AppSettings class can be created using the AppSettingsBuilder class. The region field is mandatory and can be set using the `setRegion()` method.

The `AppSettings` class allows you to configure three settings:

* **Region**: The region where you app was created.
* [Presence Subscription](/sdk/ios/3.0/user-presence): Represents the subscription type for user presence (real-time online/offline status)
* **autoEstablishSocketConnection(boolean value)**: This property takes a boolean value which when set to true informs the SDK to manage the web-socket connection internally. If set to false, it informs the SDK that the web-socket connection will be managed manually. The default value for this parameter is true. For more information on this, please check the [Managing Web-Socket connections manually](/sdk/android/3.0/advanced-managing-web-socket-connections-manually) section. The default value for this property is **true.**
* **overrideAdminHost(adminHost: string)**: This method takes the admin URL as input and uses this admin URL instead of the default admin URL. This can be used in case of dedicated deployment of CometChat.
* **overrideClientHost(clientHost: string)**: This method takes the client URL as input and uses this client URL instead of the default client URL. This can be used in case of dedicated deployment of CometChat.

We suggest you call the method on app startup preferably in the `didFinishLaunchingWithOptions:` method of the `AppDelegate` class.

<Tabs>
<Tab title="Swift">
```swift
import CometChatPro

class AppDelegate: UIResponder, UIApplicationDelegate{
{
   var window: UIWindow?
   let appId: String = "ENTER APP ID"
   let region: String = "ENTER REGION CODE"
    
func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {

let mySettings = AppSettings.AppSettingsBuilder()
  							.subscribePresenceForAllUsers()
  							.setRegion(region: region)
  							.autoEstablishSocketConnection(true)
  							.build()
        
  CometChat.init(appId: appId ,appSettings: mySettings,onSuccess: { (isSuccess) in
            if (isSuccess) {
                print("CometChat Pro SDK intialise successfully.")
            }
        }) { (error) in
                print("CometChat Pro SDK failed intialise with error: \(error.errorDescription)")
        }
        return true
    }
}
```

</Tab>

<Tab title="Objective C">
```objc
#import <CometChatPro/CometChatPro-Swift.h>

@interface AppDelegate ()

@end

@implementation AppDelegate


- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
  
  NSString *region = @"REGION";
  NSString *appID = @"YOUR_APP_ID";
    
    AppSettingsBuilder *appSettingBuilder = [[AppSettingsBuilder alloc]init];
    AppSettings *appSettings = [[[appSettingBuilder subscribePresenceForAllUsers]setRegionWithRegion:region]build];
    
    [[CometChat alloc]initWithAppId: appID appSettings:appSettings onSuccess:^(BOOL isSuccess) {
        NSLog(isSuccess ? @"CometChat Initialize Success:-YES" : @"CometChat Initialize Success:-NO");
    } onError:^(CometChatException * error) {
        NSLog(@"Error %@",[error errorDescription]);
    }];
    return YES;
}
```

</Tab>

</Tabs>



Make sure you replace the `appId` with your CometChat **App ID** in the above code.

## Register and Login your User

Once initialization is successful, you will need to create a user. To create users on the fly, you can use the `createUser()` method. This method takes a `User` object and the `API Key` as input parameters and returns the created `User` object if the request is successful.

<Tabs>
<Tab title="Swift">
```swift
let newUser : User = User(uid: "user1", name: "Kevin") // Replace with your uid and the name for the user to be created.
let authKey = "AUTH_KEY" // Replace with your Auth Key.
CometChat.createUser(user: newUser, apiKey: apiKey, onSuccess: { (User) in
      print("User created successfully. \(User.stringValue())")
  }) { (error) in
     print("The error is \(String(describing: error?.description))")
}
```

</Tab>

</Tabs>

Once initialization is successful, you will need to log the user into CometChat using the `login()` method.

The login method needs to be called in the following scenarios:

1. When the user is logging to the App for the first time.
2. If the `CometChat.getLoggedInUser()` function returns nil.

<Warning>

Kindly, make sure you add the check of CometChat.getLoggedInUser() function in your app where you check the App's user login status. In case it returns nil then you need to call the Login method inside it.

</Warning>

<Tabs>
<Tab title="Swift">
```swift
let uid    = "cometchat-uid-1"
let authKey = "YOUR_AUTH_KEY"

if CometChat.getLoggedInUser() == nil {

	CometChat.login(UID: uid, apiKey: apiKey, onSuccess: { (user) in

  	print("Login successful : " + user.stringValue())

	}) { (error) in

  	print("Login failed with error: " + error.errorDescription);

	}

}
```

</Tab>

<Tab title="Objective C">
```objc
NSString *uid 	 = @"cometchat-uid-1";
NSString *apiKey = @"YOUR_API_KEY";

if ([CometChat getLoggedInUser == nil]){
  
[CometChat loginWithUID:uid apiKey:apiKey onSuccess:^(User * user) {
    
    // Login Successful
    NSLog(@" Login Successful :%@",[user stringValue]);
    
} onError:^(CometChatException * error) {
    
    // Login error
    NSLog(@" Login failed with exception: %@",[error errorDescription]);
    
}];
}
```

</Tab>

</Tabs>

Make sure you replace the `API_KEY` with your CometChat **ApiKey** in the above code.

<Note>
Sample Users

We have set up 5 users for testing having UIDs: `cometchat-uid-1`, `cometchat-uid-2`, `cometchat-uid-3`, `cometchat-uid-4` and `cometchat-uid-5`.

</Note>

The `login()` method returns the User object containing all the information of the logged in user.

<Warning>

UID can be alphanumeric with underscore and hyphen. Spaces, punctuation and other special characters are not allowed.

</Warning>

## Integrate our iOS UI Kit

Please refer [iOS UI Kit](/ui-kit/ios/v3/overview) section to integrate iOS UI Kit inside your app.
